tests/error/errors_on_usage/var_undefined_before_modifier2.err
Error: Variable not defined (at $FILE:12:8)
   | 
10 |     if b:
11 |         y = 2
12 |     a = i
   |         ^ `i` is not defined

Guppy compilation failed due to 1 previous error
